--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
                 <a href="#home">ホーム</a>
                 <a href="#products">商品</a>
                 <a href="#cart">カート</a>
+                <a href="java-vuln.html" style="color:#ffd700;font-weight:bold;">Java脆弱性デモ</a>
                 <div class="auth-buttons">
                     <button id="loginBtn" class="btn btn-primary">ログイン</button>
                     <button id="registerBtn" class="btn btn-secondary">新規登録</button>
