Auto_commit_from_VSCode_task

--- a/public/index.html
+++ b/public/index.html
@@ -1,150 +1,225 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Vulnerable Shopping Site - 教育用</title>
-  <link rel="stylesheet" href="styles.css"/>
-  <!-- 任意：404を消したい場合は favicon を置く（public/favicon.ico を追加） -->
-  <!-- <link rel="icon" href="/favicon.ico"> -->
+<!-- 略：<head> 内はそのままでOK。styles.css もそのまま -->
 
-  <style>
-    /* モーダルの最低限のスタイル（保険） */
-    .hidden { display: none; }
-    .modal {
-      position: fixed; inset: 0; background: rgba(0,0,0,.5);
-      display: none; /* JS で表示時に flex にする */
-      align-items: center; justify-content: center; z-index: 1000;
-    }
-    .modal-content{
-      position: relative; background:#fff; padding:24px; border-radius:8px;
-      width:min(520px, 92vw);
-      box-shadow: 0 10px 30px rgba(0,0,0,.25);
-    }
-    .modal-close{
-      position:absolute; right:12px; top:12px; border:0; background:transparent;
-      font-size:24px; cursor:pointer;
-    }
-    .modal input{display:block; width:100%; margin:8px 0; padding:10px}
-    .modal .btn{width:100%; padding:10px; margin-top:8px}
-  </style>
-</head>
-<body>
-  <header>
-    <nav class="navbar">
-      <div class="nav-brand"><h1>🛒 Vulnerable Shop</h1></div>
-      <div class="nav-links">
-        <a href="#home">ホーム</a>
-        <a href="#products">商品</a>
-        <a href="#cart">カート</a>
-        <a href="java-vuln.html" style="color:#ffd700;font-weight:bold;">Java脆弱性デモ</a>
-
-        <div class="auth-buttons">
-          <button id="loginBtn" class="btn btn-primary">ログイン</button>
-          <button id="registerBtn" class="btn btn-secondary">新規登録</button>
-          <button id="logoutBtn" class="btn btn-danger" style="display:none;">ログアウト</button>
+  <body>
+    <header>
+      <nav class="navbar">
+        <div class="nav-brand"><h1>🛒 Vulnerable Shop</h1></div>
+        <div class="nav-links">
+          <a href="#home">ホーム</a>
+          <a href="#products">商品</a>
+          <a href="#cart">カート</a>
+          <a href="java-vuln.html" style="color:#ffd700;font-weight:bold;">Java脆弱性デモ</a>
+          <link rel="stylesheet" href="./styles.css">
+          <div class="auth-buttons">
+            <button id="loginBtn" class="btn btn-primary">ログイン</button>
+            <button id="registerBtn" class="btn btn-secondary">新規登録</button>
+            <button id="logoutBtn" class="btn btn-danger" style="display:none;">ログアウト</button>
+          </div>
         </div>
-      </div>
-    </nav>
-  </header>
-
-  <main>
-    <!-- ヒーロー -->
-    <section class="hero" id="home">
-      <div class="hero-content">
-        <h2>教育用脆弱性ショッピングサイト</h2>
-        <p>このサイトはセキュリティ教育のために意図的に脆弱性を含んでいます</p>
-        <div class="search-container">
-          <input type="text" id="searchInput" placeholder="商品を検索..." class="search-input">
-          <button id="searchBtn" class="btn btn-primary">検索</button>
+      </nav>
+    </header>
+  
+    <main>
+      <!-- ヒーロー -->
+      <section class="hero" id="home">
+        <div class="hero-content">
+          <h2>教育用脆弱性ショッピングサイト</h2>
+          <p>このサイトはセキュリティ教育のために意図的に脆弱性を含んでいます</p>
+          <div class="search-container">
+            <input type="text" id="searchInput" placeholder="商品を検索..." class="search-input">
+            <button id="searchBtn" class="btn btn-primary">検索</button>
+          </div>
         </div>
-      </div>
-    </section>
-
-    <!-- Products -->
-    <section id="products" class="products-section">
-      <h2>商品一覧</h2>
-      <div id="productsGrid" class="products-grid"></div>
-    </section>
-
-    <!-- Cart -->
-    <section id="cart" class="cart-section">
-      <h2>ショッピングカート</h2>
-      <div id="cartItems" class="cart-items"></div>
-      <div class="cart-total">
-        <h3>合計: <span id="cartTotal">¥0</span></h3>
-        <button id="checkoutBtn" class="btn btn-success">チェックアウト</button>
-      </div>
-    </section>
-
-    <!-- Admin -->
-    <section id="adminSection" class="admin-section" style="display:none;">
-      <h2>管理者パネル</h2>
-      <div class="admin-controls">
-        <button id="viewUsersBtn" class="btn btn-warning">ユーザー一覧</button>
-        <button id="backupBtn" class="btn btn-info">データベースバックアップ</button>
-        <button id="debugBtn" class="btn btn-danger">デバッグ情報</button>
-      </div>
-      <div id="adminContent" class="admin-content"></div>
-    </section>
-
-    <!-- 脆弱性テスト -->
-    <section class="vulnerability-section">
-      <h2>脆弱性テスト用ツール</h2>
-      <div class="vuln-tools">
-        <div class="tool-group">
-          <h3>SQLインジェクション</h3>
-          <input type="text" id="sqlInjectionInput" placeholder="SQLインジェクション例: ' OR '1'='1" class="vuln-input">
-          <button id="sqlTestBtn" class="btn btn-danger">テスト</button>
+      </section>
+  
+      <!-- 商品一覧 -->
+      <section id="products" class="products-section">
+        <h2>商品一覧</h2>
+        <div id="productsGrid" class="products-grid"></div>
+      </section>
+  
+      <!-- カート -->
+      <section id="cart" class="cart-section">
+        <h2>ショッピングカート</h2>
+        <div id="cartItems" class="cart-items"></div>
+        <div class="cart-total">
+          <h3>合計: <span id="cartTotal">¥0</span></h3>
+          <button id="checkoutBtn" class="btn btn-success">チェックアウト</button>
         </div>
-        <div class="tool-group">
-          <h3>XSSテスト</h3>
-          <input type="text" id="xssInput" placeholder="XSS例: &lt;script&gt;alert('XSS')&lt;/script&gt;" class="vuln-input">
-          <button id="xssTestBtn" class="btn btn-danger">テスト</button>
+      </section>
+  
+      <!-- 管理（教材用） -->
+      <section id="adminSection" class="admin-section" style="display:none;">
+        <h2>管理者パネル</h2>
+        <div class="admin-controls">
+          <button id="viewUsersBtn" class="btn btn-warning">ユーザー一覧</button>
+          <button id="backupBtn" class="btn btn-info">データベースバックアップ</button>
+          <button id="debugBtn" class="btn btn-danger">デバッグ情報</button>
         </div>
-        <div class="tool-group">
-          <h3>パストラバーサル</h3>
-          <input type="text" id="pathTraversalInput" placeholder="例: ../../../etc/passwd" class="vuln-input">
-          <button id="pathTestBtn" class="btn btn-danger">テスト</button>
-        </div>
+        <div id="adminContent" class="admin-content"></div>
+      </section>
+    </main>
+  
+    <footer>
+      <p>&copy; 2024 Vulnerable Shopping Site - 教育目的のみ</p>
+      <p><strong>警告:</strong> このサイトは意図的に脆弱性を含んでいます。本番環境では使用しないでください。</p>
+    </footer>
+  
+    <!-- ========== モーダルはこの1組だけ ========== -->
+    <div id="registerModal" class="modal hidden" aria-hidden="true">
+      <div class="modal-content" tabindex="-1">
+        <button type="button" id="registerClose" class="modal-close" aria-label="閉じる">×</button>
+        <h3>新規登録</h3>
+        <form id="registerForm">
+          <input id="regUsername"  type="text"     placeholder="ユーザー名" required>
+          <input id="regEmail"     type="email"    placeholder="メール（任意）">
+          <input id="regPassword"  type="password" placeholder="パスワード" required>
+          <button id="registerSubmit" type="submit" class="btn btn-primary">登録</button>
+        </form>
       </div>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2024 Vulnerable Shopping Site - 教育目的のみ</p>
-    <p><strong>警告:</strong> このサイトは意図的に脆弱性を含んでいます。本番環境では使用しないでください。</p>
-  </footer>
-
-  <!-- ▼ auth モーダル（この1組だけ） -->
-  <div id="registerModal" class="modal hidden" aria-hidden="true">
-    <div class="modal-content">
-      <button type="button" id="registerClose" class="modal-close" aria-label="閉じる">×</button>
-      <h3>新規登録</h3>
-      <form id="registerForm">
-        <!-- ★ auth.js に合わせた ID（reg* 系） -->
-        <input id="regUsername"  type="text"     placeholder="ユーザー名" required>
-        <input id="regEmail"     type="email"    placeholder="メール（任意）">
-        <input id="regPassword"  type="password" placeholder="パスワード" required>
-        <button id="registerSubmit" type="submit" class="btn btn-primary">登録</button>
-      </form>
     </div>
-  </div>
-
-  <div id="loginModal" class="modal hidden" aria-hidden="true">
-    <div class="modal-content">
-      <button type="button" id="loginClose" class="modal-close" aria-label="閉じる">×</button>
-      <h3>ログイン</h3>
-      <form id="loginForm">
-        <input id="loginUsername" type="text"     placeholder="ユーザー名" required>
-        <input id="loginPassword" type="password" placeholder="パスワード" required>
-        <button id="loginSubmit" type="submit" class="btn btn-primary">ログイン</button>
-      </form>
+  
+    <div id="loginModal" class="modal hidden" aria-hidden="true">
+      <div class="modal-content" tabindex="-1">
+        <button type="button" id="loginClose" class="modal-close" aria-label="閉じる">×</button>
+        <h3>ログイン</h3>
+        <form id="loginForm">
+          <input id="loginUsername" type="text"     placeholder="ユーザー名" required>
+          <input id="loginPassword" type="password" placeholder="パスワード" required>
+          <button id="loginSubmit" type="submit" class="btn btn-primary">ログイン</button>
+        </form>
+      </div>
     </div>
-  </div>
+  
+    <!-- 最後に読み込む順番：共通 → auth（defer） -->
+    <script src="script.js"></script>
+    <script src="js/auth.js" defer></script>
+  
+    <!-- 念のための最小スタイル（不足時の保険） -->
+    <style>
+      .hidden{display:none}
+      .modal{
+        position:fixed; inset:0; background:rgba(0,0,0,.5);
+        display:flex; align-items:center; justify-content:center; z-index:1000;
+      }
+      .modal-content{background:#fff;padding:24px;border-radius:8px;min-width:320px;max-width:90vw;position:relative}
+      .modal-close{position:absolute;right:12px;top:12px;border:0;background:transparent;font-size:24px;cursor:pointer}
+    </style>
+    <!-- これで置き換え（index.html の <style id="modal-fix">） -->
+<style id="modal-fix">
+  /* ==== Modal nice-look override ==== */
 
-  <!-- スクリプト：共通 → auth（defer） の順。どちらも defer にすると競合減ります -->
-  <script src="script.js" defer></script>
-  <script src="js/auth.js" defer></script>
-</body>
-</html>
+  /* 背景を少し暗くして中央揃え */
+  .modal{
+    position: fixed;
+    inset: 0;
+    display: grid;
+    place-items: center;
+    padding: 24px;
+    z-index: 1000;
+  }
+  /* 透過の被写界深度っぽいオーバーレイ */
+  .modal::before{
+    content:"";
+    position:absolute; inset:0;
+    background: rgba(5,10,20,.64);
+    backdrop-filter: blur(3px);
+  }
+  /* 表示/非表示は .open / .hidden で制御（JS連携） */
+  .modal.hidden{ display:none; }
+  .modal.open{ display:grid; }
+
+  /* ダイアログ本体 */
+  .modal-content{
+    position: relative;
+    z-index: 1;
+    width: clamp(320px, 90vw, 420px);
+    padding: 18px 18px 16px;
+    border-radius: 14px;
+    border: 1px solid #27334d;
+    background:
+      linear-gradient(180deg, rgba(29,37,61,.96), rgba(18,24,42,.96));
+    box-shadow:
+      0 12px 30px rgba(0,0,0,.45),
+      0 0 0 1px rgba(255,255,255,.02) inset;
+    color: #e9edf6;
+    display: flex;
+    gap: 12px;
+  }
+
+  /* タイトル */
+  .modal-content h3{
+    margin: 0 0 4px;
+    font-size: 16px;
+    font-weight: 700;
+    letter-spacing: .02em;
+  }
+
+  /* フォームの行間を均一に */
+  #registerForm, #loginForm{
+    display: grid;
+    gap: 10px;
+  }
+
+  /* 入力欄：高さ・角丸・色 */
+  .modal-content input[type="text"],
+  .modal-content input[type="email"],
+  .modal-content input[type="password"]{
+    width: 100%;
+    height: 40px;
+    padding: 10px 12px;
+    border-radius: 10px;
+    border: 1px solid #2c3a59;
+    background: #101829;
+    color: #e9edf6;
+    outline: none;
+    transition: border-color .15s ease, box-shadow .15s ease;
+  }
+  .modal-content input:focus{
+    border-color: #2d7ef7;
+    box-shadow: 0 0 0 3px rgba(45,126,247,.25);
+  }
+  .modal-content ::placeholder{ color:#99a6bf; }
+
+  /* 送信ボタン：幅いっぱい＋高さ統一 */
+  .modal-content .btn{
+    width: 100%;
+    height: 40px;
+    border-radius: 10px;
+    font-weight: 600;
+    letter-spacing: .02em;
+  }
+  .modal-content .btn.btn-primary{
+    background: linear-gradient(180deg, #2d7ef7, #1f5ed6);
+    border: 0;
+  }
+  .modal-content .btn.btn-primary:hover{
+    filter: brightness(1.05);
+  }
+  .modal-content .btn.btn-primary:active{
+    transform: translateY(1px);
+  }
+
+  /* 閉じる(×)ボタンを小さく・押しやすく */
+  .modal-close{
+    position: absolute;
+    top: 10px; right: 10px;
+    width: 28px; height: 28px;
+    display: grid; place-items: center;
+    font-size: 18px; line-height: 1;
+    border-radius: 8px;
+    border: 1px solid #2b374f;
+    background: #0f1729;
+    color: #cdd7ea;
+    cursor: pointer;
+    transition: background .15s ease, transform .05s ease;
+  }
+  .modal-close:hover{ background:#19223b; }
+  .modal-close:active{ transform: scale(.98); }
+
+  /* モーダル表示中の背景スクロールを止める（オプション） */
+  body.modal-open{ overflow: hidden; }
+</style>   
+  </body>
+  </html>
+  
