--- a/public/products.html
+++ b/public/products.html
@@ -1,61 +1,105 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>商品一覧 - Vulnerable Shop</title>
-  <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="styles.css"/>
+
+  <!-- ユーザ名ピル（他ページで未定義でも見えるよう最小スタイル） -->
+  <style>
+    .user-pill{display:none;margin-left:10px;padding:6px 10px;border-radius:999px;
+      background:rgba(255,255,255,.12);border:1px solid rgba(255,255,255,.18);
+      font-weight:600;letter-spacing:.02em}
+  </style>
+
+  <!-- モーダルの見た目（index と同等） -->
+  <style id="modal-fix">
+    .modal{position:fixed;inset:0;display:grid;place-items:center;padding:24px;z-index:1000}
+    .modal::before{content:"";position:absolute;inset:0;background:rgba(5,10,20,.64);backdrop-filter:blur(3px)}
+    .modal.hidden{display:none}.modal.open{display:grid}
+    .modal-content{position:relative;z-index:1;width:clamp(320px,90vw,420px);padding:18px;border-radius:14px;border:1px solid #27334d;background:linear-gradient(180deg,rgba(29,37,61,.96),rgba(18,24,42,.96));box-shadow:0 12px 30px rgba(0,0,0,.45),0 0 0 1px rgba(255,255,255,.02) inset;color:#e9edf6;display:flex;gap:12px}
+    .modal-content h3{margin:0 0 4px;font-size:16px;font-weight:700;letter-spacing:.02em}
+    #registerForm,#loginForm{display:grid;gap:10px}
+    .modal-content input{width:100%;height:40px;padding:10px 12px;border-radius:10px;border:1px solid #2c3a59;background:#101829;color:#e9edf6;outline:none;transition:border-color .15s,box-shadow .15s}
+    .modal-content input:focus{border-color:#2d7ef7;box-shadow:0 0 0 3px rgba(45,126,247,.25)}
+    .modal-content ::placeholder{color:#99a6bf}
+    .modal-content .btn{width:100%;height:40px;border-radius:10px;font-weight:600;letter-spacing:.02em}
+    .modal-content .btn.btn-primary{background:linear-gradient(180deg,#2d7ef7,#1f5ed6);border:0}
+    .modal-content .btn.btn-primary:hover{filter:brightness(1.05)}
+    .modal-content .btn.btn-primary:active{transform:translateY(1px)}
+    .modal-close{position:absolute;top:10px;right:10px;width:28px;height:28px;display:grid;place-items:center;font-size:18px;line-height:1;border-radius:8px;border:1px solid #2b374f;background:#0f1729;color:#cdd7ea;cursor:pointer;transition:background .15s,transform .05s}
+    .modal-close:hover{background:#19223b}.modal-close:active{transform:scale(.98)}
+    body.modal-open{overflow:hidden}
+  </style>
 </head>
 <body>
-  <header class="navbar">
-    <div class="nav-brand"><h1>🛒 Vulnerable Shop</h1></div>
-    <div class="nav-links">
-      <a href="/">ホーム</a>
-      <a href="/products.html">商品</a>
-      <a href="/cart.html">カート</a>
-      <a href="/checkout.html">決済</a>
-    </div>
+  <header>
+    <nav class="navbar">
+      <div class="nav-brand"><h1>🛒 Vulnerable Shop</h1></div>
+      <div class="nav-links">
+        <a href="./index.html">ホーム</a>
+        <a href="./products.html" aria-current="page" style="font-weight:700;">商品</a>
+        <a href="./cart.html">カート</a>
+        <a href="./java-vuln.html" style="color:#ffd700;font-weight:bold;">Java脆弱性デモ</a>
+
+        <div class="auth-buttons">
+          <button id="loginBtn" class="btn btn-primary">ログイン</button>
+          <button id="registerBtn" class="btn btn-secondary">新規登録</button>
+          <button id="logoutBtn" class="btn btn-danger" style="display:none;">ログアウト</button>
+        </div>
+
+        <!-- ★ ログインユーザー名表示 -->
+        <span id="navUser" class="user-pill" hidden></span>
+      </div>
+    </nav>
   </header>
-  <main class="products-section">
-    <h2>商品一覧</h2>
-    <div class="search-container" style="margin-bottom:1.5rem;">
-      <input class="search-input" id="q" placeholder="商品検索 (XSS/SQLi学習用)">
-      <button class="btn btn-primary" id="go">検索</button>
-    </div>
-    <div id="grid" class="products-grid"></div>
+
+  <main>
+    <section class="hero">
+      <div class="hero-content">
+        <h2>商品一覧</h2>
+        <p>検索で絞り込めます</p>
+        <div class="search-container">
+          <input type="text" id="searchInput" placeholder="商品を検索..." class="search-input">
+          <button id="searchBtn" class="btn btn-primary">検索</button>
+        </div>
+      </div>
+    </section>
+
+    <!-- 一覧 -->
+    <section id="products" class="products-section">
+      <div id="productsGrid" class="products-grid"></div>
+    </section>
   </main>
-  <script>
-    const grid = document.getElementById('grid');
-    async function load(search=''){
-      const res = await fetch('/api/products'+(search?`?search=${encodeURIComponent(search)}`:''));
-      const list = await res.json();
-      grid.innerHTML = '';
-      list.forEach(p=>{
-        const el = document.createElement('div'); el.className='product-card';
-        el.innerHTML = `
-          <img src="${p.image_path||''}" alt="${p.name}" style="width:100%;border-radius:8px;margin-bottom:10px;">
-          <h3>${p.name}</h3>
-          <p>${p.description||''}</p>
-          <div class="product-price">¥${p.price}</div>
-          <div class="product-stock">在庫: ${p.stock}</div>
-          <button class="btn btn-primary" onclick="add(${p.id})">カートに追加</button>
-        `;
-        grid.appendChild(el);
-      })
-    }
-    function add(id){
-      const cart = JSON.parse(localStorage.getItem('cart')||'[]');
-      const found = cart.find(i=>i.productId===id);
-      if(found) found.quantity++; else cart.push({productId:id, quantity:1});
-      localStorage.setItem('cart', JSON.stringify(cart));
-      alert('カートに追加しました');
-    }
-    document.getElementById('go').onclick = ()=>load(document.getElementById('q').value);
-    // Redirect to login if not logged in, but still allows browsing if cancelled
-    try{ const u = JSON.parse(localStorage.getItem('user')||'null'); if(!u){ if(confirm('ログインしますか？')) location.href='/login.html'; } }catch(e){}
-    load();
-    window.add = add;
-  </script>
+
+  <!-- auth モーダル -->
+  <div id="registerModal" class="modal hidden" aria-hidden="true">
+    <div class="modal-content">
+      <button type="button" id="registerClose" class="modal-close" aria-label="閉じる">×</button>
+      <h3>新規登録</h3>
+      <form id="registerForm">
+        <input id="regUsername"  type="text"     placeholder="ユーザー名" required>
+        <input id="regEmail"     type="email"    placeholder="メール（任意）">
+        <input id="regPassword"  type="password" placeholder="パスワード" required>
+        <button id="registerSubmit" type="submit" class="btn btn-primary">登録</button>
+      </form>
+    </div>
+  </div>
+  <div id="loginModal" class="modal hidden" aria-hidden="true">
+    <div class="modal-content">
+      <button type="button" id="loginClose" class="modal-close" aria-label="閉じる">×</button>
+      <h3>ログイン</h3>
+      <form id="loginForm">
+        <input id="loginUsername" type="text"     placeholder="ユーザー名" required>
+        <input id="loginPassword" type="password" placeholder="パスワード" required>
+        <button id="loginSubmit" type="submit" class="btn btn-primary">ログイン</button>
+      </form>
+    </div>
+  </div>
+
+  <!-- スクリプトの順番は共通：先に script.js、後に auth.js -->
+  <script src="script.js"></script>
+  <script src="js/auth.js" defer></script>
 </body>
 </html>
-
