Auto_commit_from_VSCode_task

--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,7 @@
         <a href="./products.html">商品</a>
         <a href="./cart.html">カート</a>
         <a href="./java-vuln.html" style="color:#ffd700;font-weight:bold;">Java脆弱性デモ</a>
+        <a id="profileLink" href="./profile.html" style="display:none;">プロフィール</a>
 
         <div class="auth-buttons">
           <button id="loginBtn" class="btn btn-primary">ログイン</button>
